# chrono_features

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_compare_several_algorithms.py  test_performance.py  test_readme_examples.py
chrono_features/: __init__.py  transformation_pipeline.py  ts_dataset.py
chrono_features/features/: __init__.py  _base.py  absolute_energy.py  absolute_sum_of_changes.py  autocorrelation.py  max.py  mean.py  median.py  simple_moving_average.py  std.py  sum.py  weighted_moving_average.py
scripts/: add_parameter_names.py  auto_ruff.py  format_func_definitions.py
tests/: test_compare_several_algorithms.py  test_performance.py  test_readme_examples.py  test_transformation_pipeline.py  test_trasformation_pipeline.py
tests/features/: test_absolute_energy.py  test_absolute_sum_of_changes.py  test_autocorrelation.py  test_linear_regression.py  test_mean.py  test_median.py  test_min.py  test_simple_moving_average.py  test_std.py  test_sum.py  test_weighted_moving_awerages.py
tests/features/_base/: test_feature_generator.py  test_strategy_selector.py
tests/features/absolute_sum_of_changes/: test_absolute_sum_of_changes_compare_several_algorithms.py  test_absolute_sum_of_changes_performance.py
tests/features/max/: test_max.py  test_max_compare_several_algorithms.py  test_max_performance.py
tests/features/mean/: test_mean.py  test_simple_moving_average.py  test_weighted_moving_awerages.py
tests/utils/: __init__.py  compare_multiple_implementations.py  markdown_code_tester.py  performance.py
(+5 files in other folders)
